# setuptools_testing

./: .gitignore  error  ls_local_lib_p_site-packages  ls_local_lib_site-packages  pyproject.toml_nuitka  setup.cfg
src/hello/: __main__.py  hello.py
src/hello.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
