[metadata]
name = hello
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
#install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        hello = lib.hello:hello_world

#<name> = [<package>.[<subpackage>.]]<module>[:<object>.<object>]
